support abstract domain sockets; version bump